<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_update"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/btn_rename"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/rename"
            android:textColor="@color/btn_main_text_color"
            android:textSize="@dimen/text_size_20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_dev_divide_line"
            android:background="@color/divider_line_dialog" />

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/btn_main_text_color"
            android:textSize="@dimen/text_size_20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_dev_divide_line"
            android:background="@color/divider_line_dialog" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/btn_main_text_color"
            android:textSize="@dimen/text_size_20" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/bg_dialog_update"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/main"
        android:textSize="@dimen/text_size_20" />

</LinearLayout>
