<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_close_ptz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/margin_20"
        android:contentDescription="@string/app_name_holo"
        android:src="@mipmap/ic_playfunc_close_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_30"
        android:paddingRight="@dimen/margin_30"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ptz_img"
                android:layout_width="wrap_content"
                android:contentDescription="@string/app_name_holo"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:src="@mipmap/device_live_ptz_bg" />

            <ImageView
                android:id="@+id/ptz_center_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/device_live_ptz_center_touch"
                android:contentDescription="@string/app_name_holo" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bbx_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name_holo"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ptz_minus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_14"
                    android:layout_marginRight="@dimen/margin_14"
                    android:textColor="@color/local_dev_text_color"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/zoom" />

                <ImageView
                    android:id="@+id/bbd_img"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/app_name_holo"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ptz_plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bjx_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name_holo"
                    android:src="@mipmap/ptz_minus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_14"
                    android:layout_marginRight="@dimen/margin_14"
                    android:textColor="@color/local_dev_text_color"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/focus" />

                <ImageView
                    android:id="@+id/bjd_img"
                    android:contentDescription="@string/app_name_holo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ptz_plus" />

            </LinearLayout>
            <!--                        //光圈-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gqx_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name_holo"
                    android:src="@mipmap/ptz_minus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_14"
                    android:layout_marginRight="@dimen/margin_14"
                    android:textColor="@color/local_dev_text_color"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/iris" />

                <ImageView
                    android:id="@+id/gqd_img"
                    android:contentDescription="@string/app_name_holo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ptz_plus" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>